--- a/Initiatives.html
+++ b/Initiatives.html
@@ -160,10 +160,10 @@
                     </div>
                 </div>
                 <div class="row portfolio-grid">
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11 cat-7">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/adchennaigottalent4.0.JPG" alt="Img">
+                                <img src="assets/images/portfolio/chennaigottalent4.0.JPG" alt="Img">
                                 <a href="Event - Chennai got talent 4.0.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
@@ -211,6 +211,22 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
+                                <img src="assets/images/portfolio/future youth.jpg" alt="Img">
+                                <a href="Event - Future youth.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Future youth.html">The Future 3.0 Youth Conclave</a></h3>
+                                <a class="cat-link">07/08/2023</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
+                            <div class="img-holder">
                                 <img src="assets/images/portfolio/future3.0.jpg" alt="Img">
                                 <a href="Event - Future3.0.html" class="portfolio-hover">
                                     <div class="hover-content">
@@ -219,8 +235,8 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Future3.0.html">The Future 3.0 Youth Conclave</a></h3>
-                                <a class="cat-link">07/08/2023</a>
+                                <h3 class="title"><a href="Event - Future3.0.html">The Future 3.0 Inaugural Session</a></h3>
+                                <a class="cat-link">05/08/2023</a>
                             </div>
                         </div>
                     </div>
@@ -481,7 +497,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-7 cat-11">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/chennaigottalent.jpg" alt="Img">
@@ -782,67 +798,6 @@
                         <div class="text">
                             <h3 class="title"><a href="Event - Ascensions.html">Ascensions</a></h3>
                             <a class="cat-link">25/10/2020</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section><!--====== End Portfolio Section ======-->
-        <!--====== Start Counter Section ======-->
-        <section class="counter-area counter-area-v1 pb-90">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-6">
-                        <div class="section-title text-center mb-55 wow fadeInUp">
-                            <span class="sub-title st-one">Statistics</span>
-                            <h2>Our Profile</h2>
-                            <p></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row no-gutters">
-                    
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="counter-item mb-40 wow fadeInUp" data-wow-delay=".5s">
-                            <div class="icon">
-                                <i class="flaticon-technical-support"></i>
-                            </div>
-                            <div class="text">
-                                <h2 class="number"><span>6</span>+</h2>
-                                <p>Years of Impacting Lives</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="counter-item mb-40 wow fadeInUp" data-wow-delay=".4s">
-                            <div class="icon">
-                                <i class="flaticon-medal"></i>
-                            </div>
-                            <div class="text">
-                                <h2 class="number"><span>17</span>+</h2>
-                                <p>Awards & Recognitions</p><br>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="counter-item mb-40 wow fadeInUp" data-wow-delay=".2s">
-                            <div class="icon">
-                                <i class="flaticon-start-up"></i>
-                            </div>
-                            <div class="text">
-                                <h2 class="number"><span>65</span>+</h2>
-                                <p>Successful Endeavors</p><br>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="counter-item mb-40 wow fadeInUp" data-wow-delay=".3s">
-                            <div class="icon">
-                                <i class="flaticon-creativity"></i>
-                            </div>
-                            <div class="text">
-                                <h2 class="number"><span>700</span>+</h2>
-                                <p>Hands on Board</p><br>
-                            </div>
                         </div>
                     </div>
                 </div>
