--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     </div>
                 </div>
                 <div class="row portfolio-grid">
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11 cat-7">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/chennaigottalent4.0.JPG" alt="Img">
@@ -593,7 +593,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-7 cat-11">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/chennaigottalent.jpg" alt="Img">
