--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     </div>
                     <div class="col-lg-6 col-xl-6">
                         <div class="text-wrapper mb-50 wow fadeInRight">
-                            <div class="section-title mb-15">
+                            <div class="section-title mt-30 mb-15">
                                 <span class="sub-title st-one">About Us</span>
                                 <h2>Making a difference since 2017</h2>
                             </div>
@@ -904,7 +904,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <div class="section-title text-center mb-55 wow fadeInUp">
+                        <div class="section-title text-center mt-30 mb-55 wow fadeInUp">
                             <span class="sub-title st-one">Statistics</span>
                             <h2>Our Profile</h2>
                             <p></p>
@@ -912,7 +912,6 @@
                     </div>
                 </div>
                 <div class="row no-gutters">
-                    
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="counter-item mb-40 wow fadeInUp" data-wow-delay=".5s">
                             <div class="icon">
