--- a/Initiatives.html
+++ b/Initiatives.html
@@ -19,12 +19,12 @@
     </head>
     <body>
         <!--====== Start Preloader ======-->
-        <div class="preloader">
+        <!--<div class="preloader">
             <div class="loader">
                 <div class="pre-shadow"></div>
                 <div class="pre-box"></div>
             </div>
-        </div>
+        </div>-->
         <!--====== End Preloader ======-->
         <!--====== offcanvas-panel ======-->
         <div class="offcanvas-panel">
@@ -128,6 +128,7 @@
             </div>
         </section>
         <!--====== End Page-banner section ======-->
+        <!--====== Start Portfolio Section ======-->
         <section class="portfolio-area portfolio-area-v1 light-gray-bg pt-130 pb-70" id="initiatives">
             <div class="container">
                 <div class="row">
@@ -150,17 +151,35 @@
                                 <li data-filter=".cat-4">Rural Initiative</li>
                                 <li data-filter=".cat-5">Health</li>
                                 <li data-filter=".cat-6">Sustainable Development</li>
+                                <!-- <li data-filter=".cat-6">Climate Change</li> -->
                                 <li data-filter=".cat-7">Arts & Culture</li>
                                 <li data-filter=".cat-8">Accessibility</li>
                                 <li data-filter=".cat-9">Membership Engagement</li>
                                 <li data-filter=".cat-10">Projects</li>
-                                <li data-filter=".cat-11">Others</li>
+                                <!--<li data-filter=".cat-11">Sports</li>-->
+                                <li data-filter=".cat-12">Others</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="row portfolio-grid">
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11 cat-7">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5 cat-11">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
+                            <div class="img-holder">
+                                <img src="assets\images\portfolio\Kick 1.0.png" alt="Img">
+                                <a href="Event - Kick 1.0.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Kick 1.0.html">Kick 1.0</a></h3>
+                                <a class="cat-link">03/09/2023</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12 cat-7">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/chennaigottalent4.0.JPG" alt="Img">
@@ -208,7 +227,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/future youth.jpg" alt="Img">
@@ -224,7 +243,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/future3.0.jpg" alt="Img">
@@ -256,7 +275,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/cater the canines.jpg" alt="Img">
@@ -320,7 +339,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".3s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Y20.jpg" alt="Img">
@@ -352,7 +371,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/dakshin23.jpg" alt="Img">
@@ -433,7 +452,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/yiannualday.jpg" alt="Img">
@@ -497,7 +516,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-7 cat-11">
+                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-7 cat-12">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/chennaigottalent.jpg" alt="Img">
@@ -802,7 +821,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section><!--====== End Portfolio Section ======-->
         <!--====== Start Footer ======-->
        <footer class="footer-area page-footer light-gray-bg">
         <div class="container">
