--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     </head>
     <body>
         <!--====== Start Preloader ======-->
-        <div class="preloader">
+        <!--<div class="preloader">
             <div class="loader">
                 <div class="pre-shadow"></div>
                 <div class="pre-box"></div>
             </div>
-        </div>
+        </div>-->
         <!--====== End Preloader ======-->
         <!--====== offcanvas-panel ======-->
         <div class="offcanvas-panel">
@@ -148,22 +148,22 @@
                 <div class="container-1450">
                     <div class="cta-wrapper dark-blue-bg">
                         <!-- <div class="cta-img1 wow fadeInDown"><img src="assets/images/register1.jpg" alt="Img"></div>   change to assets/images/register.png and duplicate membership template-->
-                        <div class="row mt-50 align-items-center">
+                        <div class="row mt-50 justify-content-center align-items-center">
                             <!-- <div class="col-xl-6 col-lg-6 mb-50">
                                 <div class="cta-img1 wow fadeInDown"><img src="assets/images/register1.jpg" alt="Img"></div>   \
                             </div> -->
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one">
                                 <div class="img-holder">
-                                    <img src="assets/images/Registration/Kick.png" alt=""><a href="assets/images/Registration/Kick.png" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
+                                    <img src="assets\images\Registration\Yuvaneta231.png" alt=""><a href="assets\images\Registration\Yuvaneta231.png" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 mt-35">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-55">
-                                        <h2><span class="sub-title">The match awaits your entry!<br><br></span></h2><!--<span class="fill-text"></span>-->
-                                        <h2 align="left"><span class="fill-text">Are you ready </span> to unshakle your skills <span class="fill-text"> on the field ?</span></h2>
+                                        <h2><span class="sub-title">Join us on our special day!!!<br><br></span></h2><!--<span class="fill-text"></span>-->
+                                        <h2 align="left"><span class="fill-text">Witness Us Embracing </span> the New Faces <span class="fill-text"> of </span> YUVA REC </h2>
                                     </div>
-                                    <a href="https://forms.gle/kXAphpTNCBheRVHz8" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
+                                    <a href="https://forms.gle/m3fJEE6bpYDBJvBe8" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
                                 </div>
                             </div>
                         </div>
@@ -246,17 +246,35 @@
                                 <li data-filter=".cat-4">Rural Initiative</li>
                                 <li data-filter=".cat-5">Health</li>
                                 <li data-filter=".cat-6">Sustainable Development</li>
+                                <!-- <li data-filter=".cat-6">Climate Change</li> -->
                                 <li data-filter=".cat-7">Arts & Culture</li>
                                 <li data-filter=".cat-8">Accessibility</li>
                                 <li data-filter=".cat-9">Membership Engagement</li>
                                 <li data-filter=".cat-10">Projects</li>
-                                <li data-filter=".cat-11">Others</li>
+                                <!--<li data-filter=".cat-11">Sports</li>-->
+                                <li data-filter=".cat-12">Others</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="row portfolio-grid">
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11 cat-7">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5 cat-11">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
+                            <div class="img-holder">
+                                <img src="assets\images\portfolio\Kick 1.0.png" alt="Img">
+                                <a href="Event - Kick 1.0.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Kick 1.0.html">Kick 1.0</a></h3>
+                                <a class="cat-link">03/09/2023</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12 cat-7">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/chennaigottalent4.0.JPG" alt="Img">
@@ -304,7 +322,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/future youth.jpg" alt="Img">
@@ -320,7 +338,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/future3.0.jpg" alt="Img">
@@ -352,7 +370,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/cater the canines.jpg" alt="Img">
@@ -416,7 +434,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".3s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Y20.jpg" alt="Img">
@@ -448,7 +466,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/dakshin23.jpg" alt="Img">
@@ -529,7 +547,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/yiannualday.jpg" alt="Img">
@@ -593,7 +611,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-7 cat-11">
+                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-7 cat-12">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/chennaigottalent.jpg" alt="Img">
