--- a/reg.html
+++ b/reg.html
@@ -19,12 +19,12 @@
     </head>
     <body>
         <!--====== Start Preloader ======-->
-        <div class="preloader">
+        <!--<div class="preloader">
             <div class="loader">
                 <div class="pre-shadow"></div>
                 <div class="pre-box"></div>
             </div>
-        </div>
+        </div>-->
         <!--====== End Preloader ======-->
         <!--====== offcanvas-panel ======-->
         <div class="offcanvas-panel">
@@ -145,6 +145,20 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".10s">
+                            <div class="img-holder">
+                                <a href="https://forms.gle/m3fJEE6bpYDBJvBe8">
+                                <img src="assets/images/Registration/Yuvaneta231.png " alt="">
+                            </a>
+                            </div>
+                            <div class="text text-center">
+                               
+                                <h4><br><a href="https://forms.gle/m3fJEE6bpYDBJvBe8">Yuvaneta '23</a></h4>
+                                <p class="position">25/09/2023</p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".10s">
                             <div class="img-holder">
