--- a/team.html
+++ b/team.html
@@ -19,12 +19,12 @@
     </head>
     <body>
         <!--====== Start Preloader ======-->
-        <div class="preloader">
+        <!--<div class="preloader">
             <div class="loader">
                 <div class="pre-shadow"></div>
                 <div class="pre-box"></div>
             </div>
-        </div>
+        </div>-->
         <!--====== End Preloader ======-->
  <!--====== offcanvas-panel ======-->
  <div class="offcanvas-panel">
