--- a/reg.html
+++ b/reg.html
@@ -145,20 +145,22 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".10s">
+                    <div class="col-lg-5 col-md-6 col-sm-12 mx-auto">
+                        <div class="team-item mb-55 wow fadeInUp mx-auto" data-wow-delay=".10s">
                             <div class="img-holder">
                                 <a href="https://forms.gle/m3fJEE6bpYDBJvBe8">
-                                <img src="assets/images/Registration/Yuvaneta231.png " alt="">
+                                <img src="assets/images/Registration/Yuvaneta23.png " alt="">
                             </a>
                             </div>
                             <div class="text text-center">
                                
                                 <h4><br><a href="https://forms.gle/m3fJEE6bpYDBJvBe8">Yuvaneta '23</a></h4>
-                                <p class="position">25/09/2023</p>
+                                <p class="position">26/09/2023</p>
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".10s">
                             <div class="img-holder">
