--- a/Event - Chennai got talent 4.0.html
+++ b/Event - Chennai got talent 4.0.html
@@ -216,15 +216,7 @@
                             
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".10s">
-                            <div class="img-holder">
-                                <img src="assets/images/Events/cgt 4.0/17.JPG" alt="">
-                            </div>
-                            
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-lg-4 col-md-6 col-sm-12 mx-auto">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
                                 <img src="assets/images/Events/cgt 4.0/8.JPG" alt="">
