--- a/team.html
+++ b/team.html
@@ -144,10 +144,10 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".10s">
                             <div class="img-holder">
-                                <img src="assets/images/team/madhuvanti.png" alt="">
+                                <img src="assets/images/team/ric.jpg" alt="">
                             </div>
                             <div class="text text-center">
-                                <h4><p><br>Madhuvanti U</p></h4>
+                                <h4><p><br>Richard V</p></h4>
                                 <p class="position">YUVA Chair</p>
                             </div>
                         </div>
@@ -155,11 +155,11 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/team/richard.png" alt="">
+                                <img src="assets/images/team/Siva.jpg" alt="">
                             </div>
                             <div class="text text-center">
                                 
-                                <h4><a><br>Richard V</a></h4>
+                                <h4><a><br>Siva Santhosh</a></h4>
                                 <p class="position">YUVA Co Chair</p>
                             </div>
                         </div>
