--- a/team.html
+++ b/team.html
@@ -167,12 +167,12 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".20s">
                             <div class="img-holder">
-                                <img src="assets/images/team/sd.png" alt="">
+                                <img src="assets/images/team/Joshna james.JPG" alt="">
                             </div>
                             <div class="text text-center">
                                
-                                <h4><a><br>Santhosh S D</a></h4>
-                                <p class="position">Chair - E & I</p>
+                                <h4><a><br>Joshna James</a></h4>
+                                <p class="position">Chair - Accessibility</p>
                             </div>
                         </div>
                     </div>
