--- a/team.html
+++ b/team.html
@@ -179,12 +179,12 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".25s">
                             <div class="img-holder">
-                                <img src="assets/images/team/nivedhitha.png" alt="">
+                                <img src="assets/images/team/charanyaa.png" alt="">
                             </div>
                             <div class="text text-center">
                                 
-                                <h4><a><br>Nivedhitha G K</a></h4>
-                                <p class="position">Co Chair - E & I</p>
+                                <h4><a><br>Charanya R</a></h4>
+                                <p class="position">Co Chair - Accessibility</p>
                             </div>
                         </div>
                     </div>
