--- a/team.html
+++ b/team.html
@@ -207,7 +207,7 @@
                             </div>
                             <div class="text text-center">
                                
-                                <h4><a><br>Varsheni S</a></h4>
+                                <h4><a><br>Guna</a></h4>
                                 <p class="position">Co Chair - Masoom</p>
                             </div>
                         </div>
