--- a/team.html
+++ b/team.html
@@ -219,7 +219,7 @@
                             </div>
                             <div class="text text-center">
                                
-                                <h4><a><br>Sanjana M</a></h4>
+                                <h4><a><br>Linghesh</a></h4>
                                 <p class="position">Chair - Road Safety</p>
                             </div>
                         </div>
