--- a/team.html
+++ b/team.html
@@ -359,7 +359,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".40s">
                             <div class="img-holder">
-                                <img src="assets/images/team/jefferey1.jpeg" alt="">
+                                <img src="assets/images/team/jeffrey.jpg" alt="">
                             </div>
                             <div class="text text-center">
                                 
