--- a/team.html
+++ b/team.html
@@ -191,12 +191,12 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".30s">
                             <div class="img-holder">
-                                <img src="assets/images/team/harini.png" alt="">
+                                <img src="assets/images/team/Pritika.jpg" alt="">
                             </div>
                             <div class="text text-center">
                                 
-                                <h4><a><br>Harini O K</a></h4>
-                                <p class="position">Chair - Masoom</p>
+                                <h4><a><br>Pritika K</a></h4>
+                                <p class="position">Chair - Arts and Culture</p>
                             </div>
                         </div>
                     </div>
