--- a/Event - Addiction prevention.html
+++ b/Event - Addiction prevention.html
@@ -52,8 +52,8 @@
                     </li>
                     <li>
                         <i class="fal fa-phone"></i>
-                        <a href="tel:9025794684">Madhuvanti - +91 9025794684</a>
-                        <a href="tel:8667060010">Richard    - +91 8667060010</a>
+                        <a href="tel:8667060010">Richard - 86670 60010</a>
+                            <a href="tel:6385486230">Siva Santhosh - 63854 86230</a>
                     </li>
                 </ul>
             </div>
