--- a/Event - Pawsitivity.html
+++ b/Event - Pawsitivity.html
@@ -51,8 +51,8 @@
                         </li>
                         <li>
                             <i class="fal fa-phone"></i>
-                            <a href="tel:9025794684">Madhuvanti - 90257 94684</a>
                             <a href="tel:8667060010">Richard - 86670 60010</a>
+                            <a href="tel:6385486230">Siva Santhosh - 63854 86230</a>
                         </li>
                     </ul>
                 </div>
