--- a/contact.html
+++ b/contact.html
@@ -52,8 +52,8 @@
                         </li>
                         <li>
                             <i class="fal fa-phone"></i>
-                            <a href="tel:9025794684">Madhuvanti - 90257 94684</a>
-                            <a href="tel:8667060010">Richard    - 86670 60010</a>
+                            <a href="tel:8667060010">Richard - 86670 60010</a>
+                            <a href="tel:6385486230">Siva Santhosh - 63854 86230</a>
                         </li>
                     </ul>
                 </div>
@@ -243,8 +243,8 @@
                                             </div>
                                             <div class="info">
                                                 <h4>Phone Number</h4>
-                                                <p><a href="tel:9025794684">Madhuvanti : +91 9025794684</a></p>
                                                 <p><a href="tel:8667060010">Richard    : +91 8667060010</a></p>
+                                                <p><a href="tel:6385486230">Siva Santhosh   : +91 6385486230</a></p>
                                             </div>
                                         </div>
                                     </div>
