--- a/index.html
+++ b/index.html
@@ -245,19 +245,34 @@
                                 <li data-filter=".cat-3">Road Safety</li>
                                 <li data-filter=".cat-4">Rural Initiative</li>
                                 <li data-filter=".cat-5">Health</li>
-                                <li data-filter=".cat-6">Sustainable Development</li>
-                                <!-- <li data-filter=".cat-6">Climate Change</li> -->
+                                <li data-filter=".cat-6">Climate Change</li> 
                                 <li data-filter=".cat-7">Arts & Culture</li>
                                 <li data-filter=".cat-8">Accessibility</li>
                                 <li data-filter=".cat-9">Membership Engagement</li>
                                 <li data-filter=".cat-10">Projects</li>
-                                <!--<li data-filter=".cat-11">Sports</li>-->
+                                <li data-filter=".cat-11">Sports</li>
                                 <li data-filter=".cat-12">Others</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="row portfolio-grid">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
+                            <div class="img-holder">
+                                <img src="assets\images\portfolio\Yuvaneta23.png" alt="Img">
+                                <a href="Event - Yuvaneta23.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Yuvaneta23.html">Yuvaneta '23</a></h3>
+                                <a class="cat-link">26/09/2023</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5 cat-11">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
