event Yuvaneta23 page updated

--- a/team.html
+++ b/team.html
@@ -215,7 +215,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".40s">
                             <div class="img-holder">
-                                <img src="assets/images/team/lingesh.jpeg" alt="">
+                                <img src="assets/images/team/linghesh2.jpg" alt="">
                             </div>
                             <div class="text text-center">
                                
@@ -227,7 +227,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".45s">
                             <div class="img-holder">
-                                <img src="assets/images/team/nivedhitha.png" alt="">
+                                <img src="assets/images/team/Nivedhitha1.jpg" alt="">
                             </div>
                             <div class="text text-center">
                                 
