--- a/reg.html
+++ b/reg.html
@@ -221,12 +221,12 @@
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".20s">
                             <div class="img-holder">
                                 <a href="https://forms.gle/YpUv7YWZPnUScdHq6">
-                                <img src="assets/images/Registration/membership drive.png" alt="">
+                                <img src="assets/images/Registration/membership22.png" alt="">
                             </a>
                             </div>
                             <div class="text text-center">
                                
-                                <h4><br><a href="https://forms.gle/YpUv7YWZPnUScdHq6">Membership Drive</a></h4>
+                                <h4><br><a href="https://forms.gle/YpUv7YWZPnUScdHq6">membership22</a></h4>
                                 <p class="position">21/11/2022</p>
                             </div>
                         </div>
