--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             </div> -->
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one">
                                 <div class="img-holder">
-                                    <img src="assets\images\Registration\Yuvaneta23.png" alt=""><a href="assets\images\Registration\Yuvaneta23.png" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
+                                    <img src="assets\images\Registration\membership23.png" alt=""><a href="assets\images\Registration\membership23.png" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 mt-35">
@@ -674,7 +674,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-9 cat-8">
+                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-9 cat-11 cat-8">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/dakshin22.jpg" alt="Img">
