added portfolio, added images to yuvaneta23

--- a/Event - Yuvaneta23.html
+++ b/Event - Yuvaneta23.html
@@ -257,6 +257,48 @@
                             
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Yuvaneta23/7.jpeg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Yuvaneta23/8.jpeg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Yuvaneta23/9.jpeg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Yuvaneta23/10.jpeg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Yuvaneta23/11.jpeg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Yuvaneta23/12.jpeg" alt="">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
