--- a/reg.html
+++ b/reg.html
@@ -148,13 +148,13 @@
                     <div class="col-lg-5 col-md-6 col-sm-12 mx-auto">
                         <div class="team-item mb-55 wow fadeInUp mx-auto" data-wow-delay=".10s">
                             <div class="img-holder">
-                                <a href="https://forms.gle/m3fJEE6bpYDBJvBe8">
+                                <a href="https://bit.ly/yuvamembership23">
                                 <img src="assets/images/Registration/membership23.png " alt="">
                             </a>
                             </div>
                             <div class="text text-center">
                                
-                                <h4><br><a href="https://forms.gle/m3fJEE6bpYDBJvBe8">Membership23</a></h4>
+                                <h4><br><a href="https://bit.ly/yuvamembership23">Membership23</a></h4>
                                 <p class="position">26/09/2023</p>
                             </div>
                         </div>
