--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
                             <div class="col-xl-6 col-lg-6 mt-35">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-55">
-                                        <h2><span class="sub-title">Join us on our special day!!!<br><br></span></h2><!--<span class="fill-text"></span>-->
-                                        <h2 align="left"><span class="fill-text">Witness Us Embracing </span> the New Faces <span class="fill-text"> of </span> YUVA REC </h2>
+                                        <h2><span class="sub-title">Become a Member - Join us today!<br><br></span></h2><!--<span class="fill-text"></span>-->
+                                        <h2 align="left"><span class="fill-text"></span>Be Part <span class="fill-text"> of the  </span>  Change </h2>
                                     </div>
-                                    <a href="https://forms.gle/m3fJEE6bpYDBJvBe8" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
+                                    <a href="https://forms.gle/PcYWLiEj1YgZ5VS26" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
                                 </div>
                             </div>
                         </div>
@@ -216,7 +216,7 @@
                                         <h2><span class="fill-text">Join us in </span> being the change <span class="fill-text">you want to </span> see.</h2>
                                         <h4 class="sub-title">Enroll for our Membership !</h4>
                                     </div>
-                                    <a href="https://forms.gle/YpUv7YWZPnUScdHq6" class="main-btn bordered-btn btn-white arrow-btn">Register</a>
+                                    <a href="https://forms.gle/PcYWLiEj1YgZ5VS26" class="main-btn bordered-btn btn-white arrow-btn">Register</a>
                                 </div>
                             </div>
                         </div>
