--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-55">
                                         <h2><span class="sub-title">Become a Member - Join us today!<br><br></span></h2><!--<span class="fill-text"></span>-->
-                                        <h2 align="left"><span class="fill-text"></span>Be Part <span class="fill-text"> of the  </span>  Change </h2>
+                                        <h2 align="left"><span class="fill-text"></span>Join Yuva <span class="fill-text">  and </span>Experience the Power of community!! </h2>
                                     </div>
                                     <a href="https://forms.gle/PcYWLiEj1YgZ5VS26" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
                                 </div>
