--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-55">
                                         <h2><span class="sub-title">Become a Member - Join us today!<br><br></span></h2><!--<span class="fill-text"></span>-->
-                                        <h2 align="left"><span class="fill-text"></span>Join Yuva <span class="fill-text">  and </span>Experience the Power of community!! </h2>
+                                        <h2 align="left"><span class="fill-text">Join </span> YUVA <span class="fill-text"> and Experience the </span> Power of Community! </h2>
                                     </div>
                                     <a href="https://forms.gle/PcYWLiEj1YgZ5VS26" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
                                 </div>
@@ -260,7 +260,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
-                                <img src="assets\images\portfolio\Yuvaneta23.png" alt="Img">
+                                <img src="assets\images\portfolio\yuvaneta23.png" alt="Img">
                                 <a href="Event - Yuvaneta23.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
