--- a/reg.html
+++ b/reg.html
@@ -154,8 +154,8 @@
                             </div>
                             <div class="text text-center">
                                
-                                <h4><br><a href="https://bit.ly/yuvamembership23">Membership23</a></h4>
-                                <p class="position">26/09/2023</p>
+                                <h4><br><a href="https://bit.ly/yuvamembership23">Membership Drive 2023-24</a></h4>
+                                <p class="position">Register Now</p>
                             </div>
                         </div>
                     </div>
@@ -226,8 +226,8 @@
                             </div>
                             <div class="text text-center">
                                
-                                <h4><br><a href="https://forms.gle/YpUv7YWZPnUScdHq6">membership22</a></h4>
-                                <p class="position">21/11/2022</p>
+                                <h4><br><a href="https://forms.gle/YpUv7YWZPnUScdHq6">Membership 2022-23</a></h4>
+                                <p class="position">from 21/11/2022</p>
                             </div>
                         </div>
                     </div>
