Yuvaneta and membership drive

--- a/Event - Yuvaneta23.html
+++ b/Event - Yuvaneta23.html
@@ -228,7 +228,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".20s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Yuvaneta23/3.jpeg" alt="">
+                                <img src="assets/images/Events/Yuvaneta23/3.jpg" alt="">
                             </div>
                            
                         </div>
@@ -267,7 +267,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Yuvaneta23/8.jpeg" alt="">
+                                <img src="assets/images/Events/Yuvaneta23/8.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -281,7 +281,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Yuvaneta23/10.jpeg" alt="">
+                                <img src="assets/images/Events/Yuvaneta23/10.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -295,7 +295,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Yuvaneta23/12.jpeg" alt="">
+                                <img src="assets/images/Events/Yuvaneta23/12.jpg" alt="">
                             </div>
                         </div>
                     </div>
