--- a/reg.html
+++ b/reg.html
@@ -117,7 +117,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-7">
                         <div class="page-title text-center">
-                            <h1>Event Registration</h1>
+                            <h1>Event Registrations</h1>
                             <ul class="breadcrumbs-link">
                                 <li><a href="index.html">Home</a></li>
                                 <li class="active">Event Registrations</li>
