--- a/index.html
+++ b/index.html
@@ -421,14 +421,14 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".3s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/pawsitivity.jpg" alt="Img">
-                                <a href="Event - Pawsitivity.html" class="portfolio-hover">
+                                <a href="Event - Pawsitivity2.0.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Pawsitivity.html">Pawsitivity 2.0</a></h3>
+                                <h3 class="title"><a href="Event - Pawsitivity2.0.html">Pawsitivity 2.0</a></h3>
                                 <a class="cat-link">30/04/2023</a>
                             </div>
                         </div>
@@ -646,14 +646,14 @@
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/pawsitivity 1.0.jpg" alt="Img">
-                            <a href="Event - Pawsitivity.html" class="portfolio-hover ">
+                            <a href="Event - Pawsitivity1.0.html" class="portfolio-hover ">
                                 <div class="hover-content">
                                     <i class="far fa-external-link"></i>
                                 </div>
                             </a>
                         </div>
                         <div class="text">
-                            <h3 class="title"><a href="Event - Pawsitivity.html">Pawsitivity 1.0</a></h3>
+                            <h3 class="title"><a href="Event - Pawsitivity1.0.html">Pawsitivity 1.0</a></h3>
                             <a class="cat-link">15/05/2022</a>
                         </div>
                     </div>
