akshaya patra changes

--- a/Event - Akshaya Patra23 .html
+++ b/Event - Akshaya Patra23 .html
@@ -144,13 +144,12 @@
                         <div class="col-lg-6">
                             <div class="text-wrapper mb-50 wow fadeInRight">
                                 <div class="text">
-                                    <h3 class="title">Akshaya Patra</h3>
-                                    <p class="position">13 March 2022 & 20 December 2023</p>
-                                    <p>We, the Yi YUVA REC volunteers, served the underprivileged by providing food cooked exclusively by our dedicated team. With proper sanitation, we packed and distributed meals across Chennai, including Koyambedu, Padi, and Marina beach. This project marked a significant milestone for us, as we conducted two successful food distribution drives in 2022 and this year.
-
-                                        During our winter drive in 2023, we extended our support by distributing blankets to the homeless on the beach. The event witnessed exceptional commitment from everyone involved, ensuring its grand success. Our collective efforts aimed to combat hunger and provide comfort to those in need.
-                                        
-                                        Yi YUVA REC remains steadfast in its mission to make a positive impact in our community. We take immense pride in the accomplishments achieved through our selfless service. Together, we strive to uplift the underprivileged and continue spreading compassion and generosity throughout society.</p>                                    
+                                    <h3 class="title">Akshaya Patra 2.O</h3>
+                                    <p class="position">20 November 2022</p>
+                                    <p>Building on the foundation laid by Akshayapatra 1.0, the Akshayapatra 2.0 initiative by the dedicated volunteers of Yi YUVA REC embarked on a renewed mission to serve the underprivileged. This effort stood as a testament to our enduring commitment to making a positive impact in our community. Once again, we meticulously prepared nourishing meals, ensuring strict adherence to sanitation protocols.
+                                        These carefully curated meals were then packed and distributed across Chennai, including areas like Padi. This event marked yet another milestone for us, as we continued our legacy of service. In the winter drive of 2023, we took our support a step further by not only providing meals but also distributing blankets to the homeless, offering them warmth and comfort during the colder months.
+                                        The success of Akshayapatra 2.0 was a result of the extraordinary commitment and teamwork from everyone involved. Our collective efforts were driven by a shared goal: to combat hunger and provide comfort to those in need. Yi YUVA REC remains steadfast in its mission, taking immense pride in the accomplishments achieved through our selfless service. Together, we continue to uplift the underprivileged and spread compassion and generosity throughout society.
+                                        </p>                                    
                                 </div>
                             </div>
                         </div>
