--- a/Initiatives.html
+++ b/Initiatives.html
@@ -487,14 +487,14 @@
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/akshayapatra.jpg" alt="Img">
-                            <a href="Event - Akshaya Patra.html" class="portfolio-hover ">
+                            <a href="Event - Akshaya Patra23 .html" class="portfolio-hover ">
                                 <div class="hover-content">
                                     <i class="far fa-external-link"></i>
                                 </div>
                             </a>
                         </div>
                         <div class="text">
-                            <h3 class="title"><a href="Event - Akshaya Patra.html">Akshayapatra 2.0</a></h3>
+                            <h3 class="title"><a href="Event - Akshaya Patra23.html">Akshaya Patra 2.0</a></h3>
                             <a class="cat-link">20/11/2022</a>
                         </div>
                     </div>
@@ -647,7 +647,7 @@
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/akshaya patra 1.0.jpg" alt="Img">
-                            <a href="Event - Akshaya Patra.html" class="portfolio-hover ">
+                            <a href="Event - Akshaya Patra22.html" class="portfolio-hover ">
                                 <div class="hover-content">
                                     <i class="far fa-external-link"></i>
                                 </div>
