--- a/Event - Pawsitivity1.0.html
+++ b/Event - Pawsitivity1.0.html
@@ -179,8 +179,8 @@
                                 <img src="assets/images/icon/icon-9.png" alt="">
                             </div>
                             <div class="text">
-                                <h4>Target Audience</h4>
-                                <p>Street Dogs</p>
+                                <h4>Venue</h4>
+                                <p>Madipakkam, Chennai</p>
                             </div>
                         </div>
                     </div>
