--- a/Event - Akshaya Patra22.html
+++ b/Event - Akshaya Patra22.html
@@ -120,7 +120,7 @@
                             <h1>Events & Projects</h1>
                             <ul class="breadcrumbs-link">
                                 <li><a href="index.html">Home</a></li>
-                                <li class="active">Kick 1.0</li>
+                                <li class="active">Akshaya Patra 1.O </li>
                             </ul>
                         </div>
                     </div>
