index page link changes

--- a/Verticals.html
+++ b/Verticals.html
@@ -357,7 +357,7 @@
                             <div class="text-wrapper mb-50 wow fadeInRight">
                                 <div class="text">
                                     <h3 class="title">Sports</h3>
-                                    <p class="position">Chair - Mithran <br>Co Chair - Jeffery Hamlin V</p>
+                                    <p class="position">Chair - Mithran <br>Co Chair - Jeffrey Hamlin V</p>
                                     <p align="justify">Sports are a diverse and integral part of cultures worldwide. This vertical promotes sportsmanship, resilience, and many other aspects of society. They encompass a wide range of activities, be it traditional team sports or individual pursuits through various engaging events and workshops. Sports serve not only as a form of entertainment but also promotes physical fitness, teamwork, and competition. This vertical of Yi Yuva contributes to having a profound impact on society, fostering a sense of unity and pride among people and athletes alike.  Whether you're a player or a spectator, sports offer a platform for people to connect, compete, and celebrate the human spirit.</p>
                                 </div>
                             </div>
